# pyinjector

./: .gitmodules  MANIFEST.in  README.md  libinjector.c  pyinjector.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
integration/: Dockerfile  Makefile  container-injection.c  docker-compose.yaml
pyinjector/: __init__.py  __main__.py  api.py  injector.c  injector.pyi  pyinjector.py
tests/: test_pyinjector.py
tests/injection/: injection.c  setup.py
tests/pyinjector/: test_api.py
