[options]
zip_safe = False
python_requires = >=3.6
packages = pyinjector

[metadata]
name = pyinjector
version = 1.0.3
description = A tool/library allowing dynamic library injection into running processes
author = Maor Kleinberger
author_email = kmaork@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
keywords = injection dll so library
url = https://github.com/kmaork/pyinjector
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
